      launching the game multiple times from autosaves)
    * Code cleanup

Fixed bugs:
    * Only erode player's exposed items from monster breath attacks
    * Prevent increasing max. HP with healing spell
    * Prevent wearing ring or body armour when wearing gloves or a cloak
    * Prevent swapping weapons when secondary weapon is two-handed and
      holding a shield
    * Fixed type II demon lords (who lost all their special abilities
      with the previous release)
    * Fixed burning of grass
    * Corrected some messages
    * Fixed some visual glitches

Release 0.7.2 (2012-07-06)
-------------

Changes:
    * Added an OS X disk image with "installer".
    * Use SDL PDCurses per default on OS X. This allows to scale the window
      and set the window icon and title when running.
    * Implemented magic resistance for monsters. The hell hound, the spirit
      naga and the demon lords and prince are now resistant to damage cause
      by magic (currently only the magic missile).
    * The spells lightning, cone of cold and fireball can now destroy doors.
    * It is now possible to target a spell while blinded.
    * Implemented the disarming of traps and the removal of traps from
      containers(key: 'D'). Moved the previous shortcut for the list of
      discovered landmarks from 'D' to CTRL+D.
    * When quaffing healing or power potions at full hp or mp the maximum
      for the specific stat is increased.
    * Allow ranged attacks on invisible monsters and decreased the chance
      to hit then with melee and ranged attacks.
    * Abort searching when monsters are close.
    * The metamorph will now drop it's weapon when changing into a monster
      that cannot use it; the new monster's hp depend on the relative amount
      of the new monster type's maximum hp.
    * Show a message when an item is identified by wearing it.
    * Ensure that unique weapons won't break.
    * Added version information to the Windows installer.